--- a/index.html
+++ b/index.html
@@ -9,41 +9,41 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="pixel.css">
-    <link rel="stylesheet" href="star.css">
+    <link rel="stylesheet" href="pixel1.css">
 
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
 
 </head>
 
 <body>
-    <!-- <i class="fa fa-star"></i>
-    <i class="fa fa-star-o"></i> -->
-    <div class="firstChallenge">
-        <div id="Star" style="font-size: 5rem;"></div>
-        <div id="NoStar">0</div>
-    </div>
-
-    <div class="secondChallenge ">
-        <div class="row">
-            <div class="col-8 ">
-                <div class="parent"></div>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+    <div id='title'>
+        <div class="secondChallenge">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8 ">
+                    <div class="parent"></div>
+                </div>
+                <div class="col-4 col-md-4" style="margin:auto">
+                    <button class="btn btn-primary" id="reset"><h4>RESET</h4></button>
+                </div>
             </div>
-            <div class="col-4" style="margin:auto">
-                <button class="btn btn-primary" id="reset">Reset</button>
-            </div>
+            <!-- <div id="Pixel"></div> -->
         </div>
-        <!-- <div id="Pixel"></div> -->
-    </div>
 
-    <hr>
 
-    <script src="https://kit.fontawesome.com/407d1f7b1a.js" crossorigin="anonymous"></script>
-    <script src="star.js"></script>
-    <script src="pixel.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/407d1f7b1a.js" crossorigin="anonymous"></script>
+
+        <script src="pixel.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 
 
 </body>
